The issue was visible with the chrome version 46.0.2490.80 dev-m

--- a/src/main/webapp/css/app.css
+++ b/src/main/webapp/css/app.css
@@ -96,3 +96,9 @@ form > [layout] > span {
 .md-tabs-content .md-tab-content {
     height: initial;
 }
+
+md-input-container .md-input {
+    -webkit-flex: auto;
+        -ms-flex: auto;
+            flex: auto;
+}
